Successfully generating code for simple components

--- a/tests/entry1.html
+++ b/tests/entry1.html
@@ -15,7 +15,9 @@
           <div>Product name</div>
           <div>Product price</div>
           <div>Product count</div>
-          <button>buy</button>
+          <comp name="BuyButton">
+            <button>buy</button>
+          </comp>
         </comp>
       </comp>
     </comp>
