Created dialects, for js + ts

--- a/tests/entry1.html
+++ b/tests/entry1.html
@@ -15,7 +15,7 @@
           <div>Product name</div>
           <div>Product price</div>
           <div>Product count</div>
-          <div j-comp j-name="BuyButton">
+          <div j-comp j-jsx-lib="react" j-name="BuyButton">
             <button>buy</button>
             <div>
               <div>Buy as</div>
