Removed old component etc, created FileSaver

--- a/tests/entry1.html
+++ b/tests/entry1.html
@@ -3,7 +3,7 @@
     <title></title>
   </head>
   <body>
-    <div j-comp j-name="IndexPage">
+    <div j-comp j-dialect="typescript" j-name="IndexPage">
       <div j-comp j-name="Layout">
         <header>
           <div>User</div>
