Added README, also changed default component attr

--- a/tests/entry1.html
+++ b/tests/entry1.html
@@ -3,27 +3,27 @@
     <title></title>
   </head>
   <body>
-    <div j-comp j-dialect="typescript" j-name="IndexPage">
-      <div j-comp j-name="Layout">
+    <div b-comp b-dialect="typescript" b-name="IndexPage">
+      <div b-comp b-name="Layout">
         <header>
           <div>User</div>
-          <div j-comp j-name="UserInfo">
+          <div b-comp b-name="UserInfo">
             <div class="user-info-class">Username: Alan</div>
           </div>
         </header>
-        <div j-comp j-name="Product">
+        <div b-comp b-name="Product">
           <div>Product name</div>
           <div>Product price</div>
           <div>Product count</div>
-          <div j-comp j-jsx-lib="react" j-name="BuyButton">
+          <div b-comp b-jsx-lib="react" b-name="BuyButton">
             <button>buy</button>
             <div>
               <div>Buy as</div>
-              <div j-comp j-name="UserInfo"></div>
+              <div b-comp b-name="UserInfo"></div>
             </div>
           </div>
         </div>
-        <table j-comp j-name="Table">
+        <table b-comp b-name="Table">
           <thead>
             <tr>
               <td>Header first</td>
@@ -32,7 +32,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr j-comp j-name="TableRow">
+            <tr b-comp b-name="TableRow">
               <td>First</td>
               <td>Second</td>
               <td>Third</td>
